--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=labreport
+spring.datasource.url=jdbc:h2:C:/Users/cavsl/test;IFEXISTS=FALSE
+spring.datasource.username=tugrul
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
